# buggel_perl

./: .gitignore  README.md  check_beads.py  clean_database.py  conftest.py  db.sqlite3  diagnostic_templates.py  manage.py  patch_wizard.py  pyproject.toml  pytest.ini  reset_complete.py  reset_wizard.py  reset_wizard_session.py  test_form.py  verify_wizard_reset.py  verify_wizard_reset_v2.py
.github/: copilot-instructions.md
accounts/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
beadmodels/: README_wizard_refactor.md  admin.py  apps.py  forms.py  middleware.py  model_creation_wizard.py  models.py  pixelization_wizard.py  shapes_views.py  test_session_storage.py  test_views.py  test_wizard_flow.py  tests.py  urls.py  view_beads.py  view_htmx.py  view_models.py  views.py  wizards.py
beadmodels/migrations/: 0001_initial.py  0002_add_default_boards.py  0002_customshape.py  0003_beadshape_alter_customshape_options_and_more.py  0003_remove_customshape_base_shape_and_more.py  0004_apppreference.py  0004_beadshape_creator_beadshape_is_shared_and_more.py  0005_bead.py  0005_beadmodel_metadata.py  0006_delete_bead.py
beadmodels/services/: image_processing.py  save_model.py
beadmodels/static/: README.md
beads/: admin.py  apps.py  forms.py  models.py  urls.py  view_htmx.py  views.py
buggel/: asgi.py  settings.py  urls.py  views.py  wsgi.py
notebooks/: test_pixelisation.ipynb
shapes/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: README.md  base.html  home.html  test_inheritance.html
(+175 files in other folders)
