[tool.poetry]
name = "buggel-perl"
version = "0.1.0"
description = "Creation of ironing perl model based on a picture"
authors = ["Laurent Bihin <lolofanf1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
pillow = "^10.2.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.6.1"
opencv-python = "^4.11.0.86"
django-htmx = "^1.23.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
matplotlib = "^3.10.1"
pytest-django = "^4.11.1"
pytest-xdist = "^3.6.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "buggel.settings"
